--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-architect
+
+title: croix 74
+description: site sur les croix, oratoires, ... en Haute-Savoie
+show_downloads: false
