--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote-theme:  pmarsceill/just-the-docs
+remote_theme:  pmarsceill/just-the-docs
 
 title: croix 74
 description: site sur les croix, oratoires, ... en Haute-Savoie
